# ShoppingList

./: .gitignore  .gitignore.txt  AGENTS.md  DEVELOPMENT.md  Makefile  README.md
backend/python-api/: .env.example  README.md  alembic.ini  main.py  pyproject.toml
backend/python-api/app/: main.py
backend/python-api/app/api/: dependencies.py
backend/python-api/app/api/rest/: router.py
backend/python-api/app/api/ws/: auth.py  router.py
backend/python-api/app/core/: config.py  domain_errors.py  errors.py  idempotency.py  logging.py  rate_limit.py  request_context.py  security.py
backend/python-api/app/db/: __init__.py  base.py  models.py  session.py
backend/python-api/app/modules/auth/: context.py  dependencies.py  repository.py  schemas.py  service.py
backend/python-api/app/modules/lists/: catalogs.py  policies.py  repository.py  schemas.py  service.py
backend/python-api/app/modules/notifications/: repository.py  schemas.py  service.py
backend/python-api/app/modules/realtime/: events.py  manager.py  repository.py  schemas.py  service.py
backend/python-api/app/modules/sharing/: repository.py  schemas.py  service.py
backend/python-api/migrations/: env.py
backend/python-api/migrations/versions/: 20260321_0001_backend_core_baseline.py  20260321_0002_task8_idempotency_records.py  20260321_0003_task9_share_links_audit.py
backend/python-api/scripts/: seed_dummy_user.py
backend/python-api/tests/: README.md  conftest.py  test_error_contract.py  test_security.py
backend/python-api/tests/integration/core/: test_auth_contract.py  test_error_contract.py  (+6 more)
(+349 files in other folders)
